@@ -80,7 +80,7 @@ typedef struct
     CLIENT *clnt;
 } CalcParams;
 
-int difxCalcInit(const DifxInput *D, CalcParams *p, int verbose);
+int difxCalcInit(DifxInput *D, CalcParams *p, int verbose);
 int CheckInputForSpacecraft(const DifxInput *D, CalcParams *p);
 int difxCalc(DifxInput *D, CalcParams *p, const char *prefix, int verbose);
 
